# NYC-Traffic-Collision-Analysis-and-Prediction

./: .env  .gitignore  README.md  docker-compose-ojas.yaml  docker-compose.yaml  package-lock.json  pyproject.toml
FlowSight/: package-lock.json  package.json
FlowSight/src/: theme.ts
FlowSight/src/components/: SummaryStats.tsx  TrafficTrends.tsx
FlowSight/src/pages/: About.tsx  ForgotPassword.tsx  PredictionsTraffic.tsx  RealTime.tsx
datapipeline/: .env  check_pipeline.sh  docker-compose.yml
datapipeline/Consumer/: consumer.py  dockerfile  requirements.txt
datapipeline/Producer/: app.py  dockerfile  producer.py  requirements.txt
dummy_data/: traffic_data.jsonl
frontend/: README.md
frontend/FlowSight/: README.md  index.html  package-lock.json
frontend/FlowSight/public/visualization/: sample.html  sample.js
frontend/FlowSight/src/: App.tsx  routes.tsx
frontend/FlowSight/src/components/: Footer.tsx  GoogleMapWithTraffic.tsx  Navbar.tsx  NotFound.tsx  ThemeToggle.tsx
src/nyc_traffic_collision_analysis_and_prediction/: __init__.py
src/nyc_traffic_collision_analysis_and_prediction/app-server/: Dockerfile  app-server.py  inference_model.py  requirements.txt
src/nyc_traffic_collision_analysis_and_prediction/datapipeline/: check_latest.sh
src/nyc_traffic_collision_analysis_and_prediction/model-training/: README.md  main.ipynb
src/nyc_traffic_collision_analysis_and_prediction/model_training/: .gitignore  app.py  inference_model.py  model_training.ipynb  modeling-dask.ipynb  modeling-dask_old.ipynb  requirements.txt
(+24 files in other folders)
